fix and change scrollbar styles

--- a/src/app/auth/layouts/auth-layout/auth-layout.component.scss
+++ b/src/app/auth/layouts/auth-layout/auth-layout.component.scss
@@ -83,7 +83,7 @@ img {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: var(--dark-green);
+    background: var(--secondary-green);
     border-radius: 8px;
 }
 
