--- a/src/color_variables.scss
+++ b/src/color_variables.scss
@@ -1,7 +1,6 @@
 :root {
     --primary-green: #33691E;
     --secondary-green: #162e0d;
-    --dark-green: #162e0d33;
     --body-background: #bfdec4;
     --error: red;
   }
